--- a/src/src/components/app-logo/app-logo.styles.scss
+++ b/src/src/components/app-logo/app-logo.styles.scss
@@ -1,16 +1,14 @@
 .app-logo {
-  width: 100%;
   display: flex;
   flex-direction: row;
 
   .app-logo-img {
-    width: 70px;
     height: 70px;
-    flex: 0 0;
+    flex: 0 0 70px;
   }
 
   .app-logo-info {
-    flex: 1 0;
+    flex: 0 1 300px;
     margin-top: 20px;
 
     .app-logo-title {
@@ -20,10 +18,8 @@
     }
 
     .app-logo-description {
-      flex: 0 0;
       font-size: 12px;
       color: #888;
     }
   }
-
 }
