--- a/src/src/components/app-logo/app-logo.styles.scss
+++ b/src/src/components/app-logo/app-logo.styles.scss
@@ -14,12 +14,26 @@
     .app-logo-title {
       font-size: 18px;
       font-weight: bold;
-      color: darkorange;
+      color: green;
     }
 
     .app-logo-description {
       font-size: 12px;
-      color: #888;
+      color: #333;
     }
+  }
+}
+
+.app-logo-small {
+  display: flex;
+  flex-direction: row;
+
+  .app-logo-img {
+    height: 30px;
+    flex: 0 0 30px;
+  }
+
+  .app-logo-info {
+    display: none;
   }
 }
